examples/flounder-full/apps/backend/src/shared/errors/messageful-error.interface.ts
export interface IMessagefulError {
  name: string;
  message: string;
}
